03_code2/grade.txt
Grading at Sat May  9 08:21:00 UTC 2020
Checking code2.c for legal syntax
temp.c: In function ‘printTriangle’:
temp.c:18:4: error: ‘starcount’ undeclared (first use in this function)
    starcount++;
    ^
temp.c:18:4: note: each undeclared identifier is reported only once for each function it appears in
The code did not have legal syntax!

Overall Grade: F
